  * Add tests for ubiquity.osextras.

  [ Stéphane Graber ]
  * gtk_ui.py: Update rendering of GtkComboBox following light-themes update
    (was dark text on dark background, now light text on dark background)

  [ Martin Pitt ]
  * gtk_ui.py: In only-ubiquity mode, call apport-gtk frontend ourselves after
    a crash, as there is no update-notifier running to pick it up.
    (LP: #712677)

 -- Stéphane Graber <stgraber@ubuntu.com>  Mon, 23 Jan 2012 17:42:59 -0500

ubiquity (2.9.10) precise; urgency=low

  * Handle interface change in ICU 4.8: unknown time zones result in
    TimeZone instances with ID "Etc/Unknown" rather than "GMT".
  * Import icu rather than PyICU, preferred as of python-pyicu 1.0.
  * Automatic update of included source packages: partman-basicfilesystems
    71ubuntu3, partman-btrfs 7ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 20 Dec 2011 17:59:53 +0000

ubiquity (2.9.9) precise; urgency=low

  * Cope with pygobject returning unicode objects rather than UTF-8-encoded
    str objects (LP: #905916, #906015).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 19 Dec 2011 12:25:13 +0000

ubiquity (2.9.8) precise; urgency=low

  [ Colin Watson ]
  * GTK frontend:
    - Some automatic partitioning options change the text on the next button
      to "Install Now".  Make sure that this works even when changing to the
      automatic partitioning page with one of those options automatically
      selected (LP: #766265).
  * Automatic update of included source packages: base-installer
    1.122ubuntu3, partman-auto 93ubuntu18, partman-basicfilesystems
    71ubuntu2.

  [ Stéphane Graber ]
  * Use username associated with uid 999 rather than hardcoding 'ubuntu'
    in Ubiquity. This is important now that casper sets the username and
    hostname based on media name. (LP: #290351)

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 15 Dec 2011 18:57:10 +0000

ubiquity (2.9.7) precise; urgency=low
