@@ -168,6 +168,9 @@
                 <property name="width_chars">20</property>
                 <property name="invisible_char_set">True</property>
                 <property name="placeholder_text">Password</property>
+                <accessibility>
+                  <relation type="labelled-by" target="password_label"/>
+                </accessibility>
                 <signal name="changed" handler="info_loop" swapped="no"/>
               </object>
               <packing>
@@ -213,6 +216,9 @@
                 <property name="width_chars">20</property>
                 <property name="invisible_char_set">True</property>
                 <property name="placeholder_text">Confirm password</property>
+                <accessibility>
+                  <relation type="labelled-by" target="verified_password_label"/>
+                </accessibility>
                 <signal name="changed" handler="info_loop" swapped="no"/>
               </object>
               <packing>
@@ -268,6 +274,9 @@
                 <property name="activates_default">True</property>
                 <property name="width_chars">40</property>
                 <property name="placeholder_text">Your name</property>
+                <accessibility>
+                  <relation type="labelled-by" target="fullname_label"/>
+                </accessibility>
                 <signal name="changed" handler="info_loop" swapped="no"/>
               </object>
               <packing>
@@ -307,6 +316,9 @@
                 <property name="activates_default">True</property>
                 <property name="width_chars">15</property>
                 <property name="placeholder_text">Username</property>
+                <accessibility>
+                  <relation type="labelled-by" target="username_label"/>
+                </accessibility>
                 <signal name="changed" handler="info_loop" swapped="no"/>
               </object>
               <packing>
@@ -380,6 +392,10 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="invisible_char">•</property>
+                    <accessibility>
+                      <relation type="labelled-by" target="hostname_label"/>
+                      <relation type="labelled-by" target="hostname_extra_label"/>
+                    </accessibility>
                     <signal name="changed" handler="info_loop" swapped="no"/>
                   </object>
                   <packing>
